# poetry-monorepo

./: README.md
libaws/: pyproject.toml  whoami.py
libaws/tests/: whoami_test.py
libnumpy/: domath.py  pyproject.toml
libnumpy/tests/: domath_test.py
