[tool.poetry]
name = "libaws"
version = "0.0.1"
description = ""
authors = ["cnuss"]
packages = [
    { include = "libaws", from = ".." },
]

[tool.poetry.dependencies]
python = "^3.9"
boto3 = "1.20.26"

[tool.poetry.dev-dependencies]
pytest = "6.2.5"

[build-system]
requires = [
    "setuptools==65.5.1",
    "poetry-core==1.3.2",
]
build-backend = "poetry.core.masonry.api"
