[tool.poetry]
name = "libnumpy"
version = "0.0.1"
description = ""
authors = ["cnuss"]
packages = [
    { include = "libnumpy", from = ".." },
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "1.23.5"
libaws = {path = "../libaws"}

[tool.poetry.dev-dependencies]
pytest = "6.2.5"

[build-system]
requires = [
    "setuptools==65.5.1",
    "poetry-core==1.3.2",
]
build-backend = "poetry.core.masonry.api"
